# MultithreadingPhilosophersCPP

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  fork.hpp  philosopher.hpp  table.hpp  timer.hpp  utils.hpp
src/: config.cpp  fork.cpp  main.cpp  philosopher.cpp  table.cpp  timer.cpp  utils.cpp
